# connector-service-FFI

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  index.d.ts  index.js  package-lock.json  package.json  test.js
bindings/headers/: connector_service.h
bindings/python/: ffi.py  libffi.dylib
src/: lib.rs
tests/: test_node.js  test_python.py
tests/test_haskell/: Main.hi  Main.hs  connector-ffi-test.cabal
tests/test_haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
